// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <h1
    className="title hdr-headline"
  >
    Log in to Hylo
  </h1>
  <div
    className="field"
  >
    <label
      className="field-label caption-drk-lg"
      htmlFor="email"
    >
      Your email address
    </label>
    <TextInput
      aria-label="email"
      autoFocus={true}
      inputRef={[Function]}
      label="email"
      name="email"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="field"
  >
    <label
      className="field-label caption-drk-lg"
      htmlFor="password"
    >
      Password
    </label>
    <TextInput
      aria-label="password"
      label="password"
      name="password"
      onChange={[Function]}
      onEnter={[Function]}
      type="password"
    />
  </div>
  <Button
    className="submit"
    label="Log In"
    onClick={[Function]}
  />
  <Link
    className="forgot-password text-button"
    replace={false}
    to="/reset-password"
  >
    <p
      className="forgot-password text-button"
    >
      Forgot password?
    </p>
  </Link>
  <p
    className="connect-label caption-lt-lg"
  >
    Or connect with:
  </p>
  <div
    className="auth-buttons caption-lt-lg"
  >
    <a
      aria-label="Log in with Facebook"
      className="facebook"
      onClick={[Function]}
      tabIndex={0}
    >
      <Icon
        className="auth-icon"
        name="Facebook"
      />
      Facebook
    </a>
    <a
      aria-label="Log in with Google"
      className="google"
      onClick={[Function]}
      tabIndex={0}
    >
      <Icon
        className="auth-icon"
        name="Google"
      />
      Google
    </a>
  </div>
</div>
`;

exports[`renders correctly with mobile redirect 1`] = `
<div>
  <DownloadAppPortal
    url="some.url"
  />
  <h1
    className="title hdr-headline"
  >
    Log in to Hylo
  </h1>
  <div
    className="field"
  >
    <label
      className="field-label caption-drk-lg"
      htmlFor="email"
    >
      Your email address
    </label>
    <TextInput
      aria-label="email"
      autoFocus={true}
      inputRef={[Function]}
      label="email"
      name="email"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="field"
  >
    <label
      className="field-label caption-drk-lg"
      htmlFor="password"
    >
      Password
    </label>
    <TextInput
      aria-label="password"
      label="password"
      name="password"
      onChange={[Function]}
      onEnter={[Function]}
      type="password"
    />
  </div>
  <Button
    className="submit"
    label="Log In"
    onClick={[Function]}
  />
  <Link
    className="forgot-password text-button"
    replace={false}
    to="/reset-password"
  >
    <p
      className="forgot-password text-button"
    >
      Forgot password?
    </p>
  </Link>
  <p
    className="connect-label caption-lt-lg"
  >
    Or connect with:
  </p>
  <div
    className="auth-buttons caption-lt-lg"
  >
    <a
      aria-label="Log in with Facebook"
      className="facebook"
      onClick={[Function]}
      tabIndex={0}
    >
      <Icon
        className="auth-icon"
        name="Facebook"
      />
      Facebook
    </a>
    <a
      aria-label="Log in with Google"
      className="google"
      onClick={[Function]}
      tabIndex={0}
    >
      <Icon
        className="auth-icon"
        name="Google"
      />
      Google
    </a>
  </div>
</div>
`;
